# pytechnove

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  setup.py  sonar-project.properties
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: codeql.yaml  linting.yaml  release.yaml  tests.yaml  typing.yaml
examples/: get_info.py  set_auto_charge.py  set_high_rate_schedule.py  set_high_tariff_schedule.py  set_max_current.py
pytechnove/: StationInfo.py  __init__.py
src/pytechnove/: API.py
src/technove/: __init__.py  exceptions.py  models.py  technove.py
tests/: __init__.py  test_models.py  test_technove.py
