[tool.poetry]
authors = ["Christophe Gagnier <christopheextensions@gmail.com>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "Asynchronous Python client for TechnoVE."
documentation = "https://github.com/Moustachauve/pytechnove"
homepage = "https://github.com/Moustachauve/pytechnove"
keywords = ["TechnoVE", "EV", "Charger", "client"]
license = "MIT"
maintainers = ["Christophe Gagnier <christopheextensions@gmail.com>"]
name = "python-technove"
packages = [
  {include = "technove", from = "src"},
]
readme = "README.md"
repository = "https://github.com/Moustachauve/pytechnove"
version = "1.0.0"

[tool.poetry.dependencies]
aiohttp = ">=3.0.0"
awesomeversion = ">=22.1.0"
backoff = ">=2.2.0"
cachetools = ">=4.0.0"
python = "^3.11"
yarl = ">=1.6.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Moustachauve/pytechnove/issues"
Changelog = "https://github.com/Moustachauve/pytechnove/releases"

[tool.poetry.group.dev.dependencies]
aresponses = "3.0.0"
codespell = "2.4.2"
covdefaults = "2.3.0"
coverage = {version = "7.13.5", extras = ["toml"]}
mypy = "1.20.1"
pre-commit = "4.5.1"
pre-commit-hooks = "6.0.0"
pylint = "4.0.5"
pytest = "9.0.3"
pytest-asyncio = "1.3.0"
pytest-cov = "7.1.0"
ruff = "0.13.3"
safety = "3.7.0"
types-cachetools = "^5.3.0"
yamllint = "1.38.0"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["technove"]

[tool.coverage.report]
fail_under = 53
show_missing = true

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.13"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pylint.MASTER]
ignore = [
  "tests",
]

[tool.pylint.BASIC]
good-names = [
  "_",
  "ex",
  "fp",
  "i",
  "id",
  "j",
  "k",
  "on",
  "Run",
  "T",
  "wv",
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "too-few-public-methods",
  "duplicate-code",
  "format",
  "unsubscriptable-object",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pylint.DESIGN]
max-attributes = 20

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
ignore = [
  "ANN401", # Opinioated warning on disallowing dynamically typed expressions
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "D417", # False positives in some occasions
  "PLR2004", # Just annoying, not really useful

  # Conflicts with the Ruff formatter
  "COM812",
  "ISC001",
]
select = ["ALL"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["technove"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

